Skill description translations

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3844,6 +3844,7 @@
   "npcDialogues.chase.intro2": "However I'm in a bit of a pickle. My herd has mysteriously gone missing - it's like they disappeared out of thin air!",
   "npcDialogues.sheep.intro1": "Thanks for finding me! One moment I was pretending to be a sheep with the Cowboy and the next moment I was here.",
   "npcDialogues.sheep.intro2": "All I remember is flashing lights and strange noises...",
+
   "skill.greenThumb": "Reduce crop growth time by 5%",
   "skill.youngFarmer": "+0.1 Basic Crop yield",
   "skill.experiencedFarmer": "+0.1 Medium Crop yield",
@@ -3851,16 +3852,128 @@
   "skill.efficientBin": "+5 Sprout Mix when collecting from Compost Bin",
   "skill.turboCharged": "+5 Fruitful Blend when collecting from Turbo Composter",
   "skill.oldFarmer": "+0.1 Advanced Crop yield",
-  "skill.strongRoots": "Advanced crops grow 10% faster",
+  "skill.strongRoots": "-10% Advanced crop growth time",
   "skill.coinSwindler": "+10% coins when selling crops (Seed Shop)",
   "skill.goldenSunflower": "1 in 700 chance to get +0.35 gold when manually harvesting sunflowers",
   "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area",
   "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area",
-  "skill.instantGrowth": "Grants the ability to instantly harvest all currently growing crops (usable once every 72 hours)",
+  "skill.instantGrowth": "[Power Skill] Grants the ability to instantly harvest all currently growing crops",
   "skill.acreFarm": "+1 Advanced crop yield, -0.5 Basic and Medium crop yield",
   "skill.hectareFarm": "+1 Basic and Medium crop yield, -0.5 Advanced crop yield",
   "skill.premiumWorms": "+10 Rapid Root when collecting from Premium Composter",
   "skill.lauriesGains": "Increases Laurie the Chuckle Crow's area of effect (AOE) to a 7x7 area",
+  "skill.fruitfulFumble": "+0.1 Fruit Patch Yield",
+  "skill.fruityHeaven": "Fruit Patch seeds cost 10% less",
+  "skill.fruityProfit": "Tango coins deliveries revenue +50%",
+  "skill.loyalMacaw": "Macaw's effect doubled",
+  "skill.catchup": "-10% patch fruit growth time",
+  "skill.noAxeNoWorries": "Chop fruit branches without axes, but get -1 wood from fruit branches",
+  "skill.fruityWoody": "Fruit plants drop +1 wood when chopped",
+  "skill.pearTurbocharge": "Double Immortal Pear's effect",
+  "skill.crimeFruit": "Increase Tomato and Lemon stock by 10",
+  "skill.generousOrchard": "10% chance to get +1 patch fruit yield",
+  "skill.longPickings": "Apple and Banana grow 2x faster, but all other patch fruits take 2x longer to grow",
+  "skill.shortPickings": "Blueberry and Orange grow 2x faster, but all other patch fruits take 2x longer to grow",
+  "skill.zestyVibes": "+1 Tomato and Lemon yield, but -0.5 all other patch fruit yield",
+  "skill.lumberjacksExtra": "Trees drop +0.1 wood",
+  "skill.treeCharge": "Trees grow 10% quicker",
+  "skill.moreAxes": "Increase stock of axes by 50",
+  "skill.instaChop": "1 Tap Trees",
+  "skill.toughTree": "1/10 chance of +3 wood yield",
+  "skill.fellersDiscount": "Axes cost 20% less coins",
+  "skill.moneyTree": "1% chance of finding 200 Coins when chopping trees",
+  "skill.treeTurnaround": "Insta Grow Chance (10%)",
+  "skill.treeBlitz": "[Power Skill] Ability to make all trees instantly grow (1/24h)",
+  "skill.fishermansTwoFold": "+2 Fishing daily limit",
+  "skill.fishyChance": "10% chance of +1 basic fish",
+  "skill.fishyRoll": "10% chance of +1 advanced fish",
+  "skill.reelDeal": "Rods cost 50% less coins",
+  "skill.fishermansFiveFold": "+5 Fishing daily limit",
+  "skill.fishyFortune": "Corale deliveries coin revenue increased by 50%",
+  "skill.bigCatch": "Increase bar for catching game",
+  "skill.fishyGamble": "10% chance of +1 expert fish",
+  "skill.frenziedFish": "+1 fish and 50% chance of +1 fish during fish frenzy",
+  "skill.moreWithLess": "+10 daily fishing limit but -1 worm from all composters",
+  "skill.fishyFeast": "+20% Fish XP",
+  "skill.abundantHarvest": "+0.2 Egg, Wool and Milk yield",
+  "skill.efficientFeeding": "Animals require 5% less feed",
+  "skill.restlessAnimals": "Animals sleep 5% less time",
+  "skill.doubleBale": "Double Bale's Effect",
+  "skill.fineFibers": "+0.1 Feather, Leather and Merino Wool yield",
+  "skill.bountifulBounties": "Animal Bounties reward 50% more coins",
+  "skill.heartwarmingInstruments": "Animal Affection tools give 50% more animal xp",
+  "skill.kaleMix": "Mixed Grain requires 3 kale to mix instead",
+  "skill.alternateMedicine": "Reduced medicine cost (coming soon)",
+  "skill.healthyLivestock": "Chance of sickness reduced by 50%",
+  "skill.cluckyGrazing": "Chickens require 25% less feed, but other animals require 50% more feed",
+  "skill.sheepwiseDiet": "Sheep require 25% less feed, but other animals require 50% more feed",
+  "skill.cowSmartNutrition": "Cows require 25% less feed, but other animals require 50% more feed",
+  "skill.oliveGarden": "+0.2 Olive Yield",
+  "skill.riceAndShine": "+0.2 Rice Yield",
+  "skill.grapeEscape": "+0.2 Grape Yield",
+  "skill.victoriasSecretary": "Victoria's coin delivery revenue increased by 50%",
+  "skill.oliveExpress": "10% faster Olive growth",
+  "skill.riceRocket": "10% faster Rice growth",
+  "skill.vineVelocity": "10% faster Grape growth",
+  "skill.greenhouseGuru": "[Power Skill] Ability to make all Greenhouse crops currently growing ready to be harvested (1/96h)",
+  "skill.greenhouseGamble": "5% Chances of +1 yield for Greenhouse crops/fruits",
+  "skill.slickSaver": "Greenhouse plants need 1 less oil",
+  "skill.rockAndRoll": "+0.1 Stone Yield",
+  "skill.ironBumpkin": "+0.1 Iron Yield",
+  "skill.speedMiner": "Stone recovers 20% faster",
+  "skill.tapProspector": "1 tap small mineral nodes",
+  "skill.forgeWardProfits": "+20% Blacksmith deliveries revenue",
+  "skill.ironHustle": "Iron recovers 30% faster",
+  "skill.frugalMiner": "Pickaxes cost 20% less Coins",
+  "skill.rockyFavor": "+1 Stone yield, -0.5 Iron yield",
+  "skill.ferrousFavor": "+1 Iron yield, -0.5 Stone yield",
+  "skill.midasSprint": "Gold Recovers 10% faster",
+  "skill.goldenTouch": "+0.5 Gold Yield",
+  "skill.morePicks": "Increase stock of pickaxe by 70, stone pickaxe by 20, iron pickaxe by 7",
+  "skill.fireKissed": "+1 Crimstone yield on 5th consecutive day",
+  "skill.firesideAlchemist": "Crimstone recovers 15% faster",
+  "skill.fastFeasts": "Meals from Firepit, Kitchen cook 10% faster",
+  "skill.nomNom": "+10% Food deliveries revenue",
+  "skill.munchingMastery": "+5% Experience from eating meals",
+  "skill.swiftSizzle": "Firepit cooking speed with oil increased by 40%",
+  "skill.frostedCakes": "Cakes cook 10% faster",
+  "skill.juicyBoost": "+10% experience from drinking smoothies",
+  "skill.doubleNom": "+1 food but requires 2x the ingredients",
+  "skill.turboFry": "Kitchen cooking speed with oil increased by 50%",
+  "skill.instantGratification": "[Power Skill] Ability make all meals currently cooking ready to be eaten (1/96h)",
+  "skill.driveThroughDeli": "Eating meals from Deli adds +15% experience",
+  "skill.fieryJackpot": "+20% Chance of +1 food from Firepit",
+  "skill.fryFrenzy": "Deli cooking speed with oil increased by 60%",
+  "skill.sweetBonus": "+0.1 Honey on claim",
+  "skill.hyperBees": "+0.1 Honey production speed",
+  "skill.bloomingBoost": "Flowers grow 10% faster",
+  "skill.flowerSale": "Flowers Seeds cost 20% less coins",
+  "skill.buzzworthyTreats": "+10% Experience on food made with Honey",
+  "skill.blossomBonding": "Increased gifting effect of flowers, +2 relationship",
+  "skill.pollenPowerUp": "Pollination effect increases to +0.3 yield",
+  "skill.petalledPerk": "10% chance of +1 Flower",
+  "skill.beeCollective": "Increased Bee Swarm chance by 20%",
+  "skill.flowerPower": "Flowers grow 20% faster",
+  "skill.floweryAbode": "Honey speed increased by +0.5 but flower growth time increased by 50%",
+  "skill.petalBlessed": "[Power Skill] Ability to make all flowers currently growing ready to be harvested (Cooldown: 96 hours)",
+  "skill.cropProcessorUnit": "Crop Machine grow time reduced by 5% but consumes 10% more oil",
+  "skill.oilGadget": "Machine uses 10% less oil",
+  "skill.oilExtraction": "+1 Oil when collecting from reserves",
+  "skill.leakProofTank": "Triple oil tank capacity",
+  "skill.cropExtensionModule": "Add Carrot and Cabbage seeds to machine",
+  "skill.rapidRig": "Crops grow 20% faster but consumes 40% more oil",
+  "skill.oilBeBack": "Oil refill time reduced by 20%",
+  "skill.fieldExpansionModule": "+5 packs added to machine",
+  "skill.fieldExtensionModule": "+5 plots added to machine",
+  "skill.efficiencyExtensionModule": "Machine uses 30% less oil",
+  "skill.greaseLightning": "[Power Skill] Ability to make empty oil wells instantly refill (1/96h)",
+  "skill.wormyTreat": "+1 Worm from composting",
+  "skill.featheryBusiness": "Use feathers to speed up composters instead of eggs but requires 2x feathers to boost",
+  "skill.swiftDecomposer": "-10% compost time",
+  "skill.compostingBonanza": "Additional 1 hour reduction in composting time but double resources when boosting composters",
+  "skill.compostingOverhaul": "+2 worms but -5 fertilisers from all composters",
+  "skill.compostingRevamp": "+5 fertilisers but -3 worms from all composters",
+
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
   "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{seasonalTicket}}s.",
