Add Power Skill cooldown as label

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3883,7 +3883,7 @@
   "skill.fellersDiscount": "Axes cost 20% less coins",
   "skill.moneyTree": "1% chance of finding 200 Coins when chopping trees",
   "skill.treeTurnaround": "Insta Grow Chance (10%)",
-  "skill.treeBlitz": "[Power Skill] Ability to make all trees instantly grow (1/24h)",
+  "skill.treeBlitz": "[Power Skill] Ability to make all trees instantly grow",
   "skill.fishermansTwoFold": "+2 Fishing daily limit",
   "skill.fishyChance": "10% chance of +1 basic fish",
   "skill.fishyRoll": "10% chance of +1 advanced fish",
@@ -3915,7 +3915,7 @@
   "skill.oliveExpress": "10% faster Olive growth",
   "skill.riceRocket": "10% faster Rice growth",
   "skill.vineVelocity": "10% faster Grape growth",
-  "skill.greenhouseGuru": "[Power Skill] Ability to make all Greenhouse crops currently growing ready to be harvested (1/96h)",
+  "skill.greenhouseGuru": "[Power Skill] Ability to make all Greenhouse crops currently growing ready to be harvested",
   "skill.greenhouseGamble": "5% Chances of +1 yield for Greenhouse crops/fruits",
   "skill.slickSaver": "Greenhouse plants need 1 less oil",
   "skill.rockAndRoll": "+0.1 Stone Yield",
@@ -3940,7 +3940,7 @@
   "skill.juicyBoost": "+10% experience from drinking smoothies",
   "skill.doubleNom": "+1 food but requires 2x the ingredients",
   "skill.turboFry": "Kitchen cooking speed with oil increased by 50%",
-  "skill.instantGratification": "[Power Skill] Ability make all meals currently cooking ready to be eaten (1/96h)",
+  "skill.instantGratification": "[Power Skill] Ability make all meals currently cooking ready to be eaten",
   "skill.driveThroughDeli": "Eating meals from Deli adds +15% experience",
   "skill.fieryJackpot": "+20% Chance of +1 food from Firepit",
   "skill.fryFrenzy": "Deli cooking speed with oil increased by 60%",
@@ -3955,7 +3955,7 @@
   "skill.beeCollective": "Increased Bee Swarm chance by 20%",
   "skill.flowerPower": "Flowers grow 20% faster",
   "skill.floweryAbode": "Honey speed increased by +0.5 but flower growth time increased by 50%",
-  "skill.petalBlessed": "[Power Skill] Ability to make all flowers currently growing ready to be harvested (Cooldown: 96 hours)",
+  "skill.petalBlessed": "[Power Skill] Ability to make all flowers currently growing ready to be harvested",
   "skill.cropProcessorUnit": "Crop Machine grow time reduced by 5% but consumes 10% more oil",
   "skill.oilGadget": "Machine uses 10% less oil",
   "skill.oilExtraction": "+1 Oil when collecting from reserves",
@@ -3966,7 +3966,7 @@
   "skill.fieldExpansionModule": "+5 packs added to machine",
   "skill.fieldExtensionModule": "+5 plots added to machine",
   "skill.efficiencyExtensionModule": "Machine uses 30% less oil",
-  "skill.greaseLightning": "[Power Skill] Ability to make empty oil wells instantly refill (1/96h)",
+  "skill.greaseLightning": "[Power Skill] Ability to make empty oil wells instantly refill",
   "skill.wormyTreat": "+1 Worm from composting",
   "skill.featheryBusiness": "Use feathers to speed up composters instead of eggs but requires 2x feathers to boost",
   "skill.swiftDecomposer": "-10% compost time",
@@ -4674,6 +4674,7 @@
   "skill.confirmationMessage": "Are you sure you want to claim {{skillName}}?",
   "skill.costMessage": "This will cost {{points}} skill points.",
   "skill.claimSkill": "Claim Skill",
+  "skill.cooldown": "{{cooldown}} Cooldown",
   "skillPath.skills": "{{skillPath}} Skills",
   "skillTier.skillPoints.singular": "{{points}} Skill Point",
   "skillTier.skillPoints.plural": "{{points}} Skill Points",
