Enhance skill system with new buffs and debuffs
- Added responsive screen sizes to Tailwind configuration.
- Refactored SkillPathDetails component to display buffs and debuffs for skills, improving clarity on skill effects.
- Updated BumpkinSkillRevamp type to include structured buff and debuff information.
- Modified FishermanModal to utilize new skill structure for displaying skill descriptions.
- Adjusted HUD and PowerSkills components to ensure proper skill data handling and display.
- Updated translations for skill descriptions to reflect new structure and improve clarity.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3845,7 +3845,7 @@
   "npcDialogues.sheep.intro1": "Thanks for finding me! One moment I was pretending to be a sheep with the Cowboy and the next moment I was here.",
   "npcDialogues.sheep.intro2": "All I remember is flashing lights and strange noises...",
 
-  "skill.greenThumb": "Reduce crop growth time by 5%",
+  "skill.greenThumb": "-5% crop growth time",
   "skill.youngFarmer": "+0.1 Basic Crop yield",
   "skill.experiencedFarmer": "+0.1 Medium Crop yield",
   "skill.bettysFriend": "Betty Coin delivery revenue increased by 30%",
@@ -3858,121 +3858,141 @@
   "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area",
   "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area",
   "skill.instantGrowth": "[Power Skill] Grants the ability to instantly harvest all currently growing crops",
-  "skill.acreFarm": "+1 Advanced crop yield, -0.5 Basic and Medium crop yield",
-  "skill.hectareFarm": "+1 Basic and Medium crop yield, -0.5 Advanced crop yield",
+  "skill.acreFarm.buff": "+1 Advanced crop yield",
+  "skill.acreFarm.debuff": "-0.5 Basic and Medium crop yield",
+  "skill.hectareFarm.buff": "+1 Basic and Medium crop yield",
+  "skill.hectareFarm.debuff": "-0.5 Advanced crop yield",
   "skill.premiumWorms": "+10 Rapid Root when collecting from Premium Composter",
   "skill.lauriesGains": "Increases Laurie the Chuckle Crow's area of effect (AOE) to a 7x7 area",
   "skill.fruitfulFumble": "+0.1 Fruit Patch Yield",
-  "skill.fruityHeaven": "Fruit Patch seeds cost 10% less",
-  "skill.fruityProfit": "Tango coins deliveries revenue +50%",
+  "skill.fruityHeaven": "-10% Fruit seeds cost",
+  "skill.fruityProfit": "+50% coins from Tango's deliveries",
   "skill.loyalMacaw": "Macaw's effect doubled",
   "skill.catchup": "-10% patch fruit growth time",
-  "skill.noAxeNoWorries": "Chop fruit branches without axes, but get -1 wood from fruit branches",
-  "skill.fruityWoody": "Fruit plants drop +1 wood when chopped",
+  "skill.noAxeNoWorries.buff": "Chop fruit branches without axes",
+  "skill.noAxeNoWorries.debuff": "-1 wood from fruit branches",
+  "skill.fruityWoody": "+1 wood from fruit branches and stems",
   "skill.pearTurbocharge": "Double Immortal Pear's effect",
   "skill.crimeFruit": "Increase Tomato and Lemon stock by 10",
   "skill.generousOrchard": "10% chance to get +1 patch fruit yield",
-  "skill.longPickings": "Apple and Banana grow 2x faster, but all other patch fruits take 2x longer to grow",
-  "skill.shortPickings": "Blueberry and Orange grow 2x faster, but all other patch fruits take 2x longer to grow",
-  "skill.zestyVibes": "+1 Tomato and Lemon yield, but -0.5 all other patch fruit yield",
-  "skill.lumberjacksExtra": "Trees drop +0.1 wood",
-  "skill.treeCharge": "Trees grow 10% quicker",
-  "skill.moreAxes": "Increase stock of axes by 50",
+  "skill.longPickings.buff": "-50% Apple and Banana growth time",
+  "skill.longPickings.debuff": "+100% growth time for all other patch fruits",
+  "skill.shortPickings.buff": "-50% Blueberry and Orange growth time",
+  "skill.shortPickings.debuff": "+100% growth time for all other patch fruits",
+  "skill.zestyVibes.buff": "+1 Tomato and Lemon yield",
+  "skill.zestyVibes.debuff": "-0.5 all other patch fruit yield",
+  "skill.lumberjacksExtra": "+0.1 wood yield",
+  "skill.treeCharge": " -10% tree growth time",
+  "skill.moreAxes": "+50 axe stock",
   "skill.instaChop": "1 Tap Trees",
   "skill.toughTree": "1/10 chance of +3 wood yield",
-  "skill.fellersDiscount": "Axes cost 20% less coins",
+  "skill.fellersDiscount": "-20% axe cost",
   "skill.moneyTree": "1% chance of finding 200 Coins when chopping trees",
-  "skill.treeTurnaround": "Insta Grow Chance (10%)",
+  "skill.treeTurnaround": "10% chance for trees to grow instantly",
   "skill.treeBlitz": "[Power Skill] Ability to make all trees instantly grow",
   "skill.fishermansTwoFold": "+2 Fishing daily limit",
   "skill.fishyChance": "10% chance of +1 basic fish",
   "skill.fishyRoll": "10% chance of +1 advanced fish",
-  "skill.reelDeal": "Rods cost 50% less coins",
+  "skill.reelDeal": "-50% rod coin cost",
   "skill.fishermansFiveFold": "+5 Fishing daily limit",
-  "skill.fishyFortune": "Corale deliveries coin revenue increased by 50%",
+  "skill.fishyFortune": "+50% coins from Corale's deliveries",
   "skill.bigCatch": "Increase bar for catching game",
   "skill.fishyGamble": "10% chance of +1 expert fish",
   "skill.frenziedFish": "+1 fish and 50% chance of +1 fish during fish frenzy",
-  "skill.moreWithLess": "+10 daily fishing limit but -1 worm from all composters",
+  "skill.moreWithLess.buff": "+10 daily fishing limit",
+  "skill.moreWithLess.debuff": "-1 worm from all composters",
   "skill.fishyFeast": "+20% Fish XP",
   "skill.abundantHarvest": "+0.2 Egg, Wool and Milk yield",
-  "skill.efficientFeeding": "Animals require 5% less feed",
-  "skill.restlessAnimals": "Animals sleep 5% less time",
+  "skill.efficientFeeding": "-5% feed to feed all animals",
+  "skill.restlessAnimals": "-5% Animal sleep time",
   "skill.doubleBale": "Double Bale's Effect",
   "skill.fineFibers": "+0.1 Feather, Leather and Merino Wool yield",
-  "skill.bountifulBounties": "Animal Bounties reward 50% more coins",
-  "skill.heartwarmingInstruments": "Animal Affection tools give 50% more animal xp",
+  "skill.bountifulBounties": "+50% Coins from Animal Bounties",
+  "skill.heartwarmingInstruments": "+50% Animal XP from Animal Affection tools",
   "skill.kaleMix": "Mixed Grain requires 3 kale to mix instead",
   "skill.alternateMedicine": "Reduced medicine cost (coming soon)",
-  "skill.healthyLivestock": "Chance of sickness reduced by 50%",
-  "skill.cluckyGrazing": "Chickens require 25% less feed, but other animals require 50% more feed",
-  "skill.sheepwiseDiet": "Sheep require 25% less feed, but other animals require 50% more feed",
-  "skill.cowSmartNutrition": "Cows require 25% less feed, but other animals require 50% more feed",
+  "skill.healthyLivestock": "-50% chance of sickness",
+  "skill.cluckyGrazing.buff": "-25% feed to feed Chickens",
+  "skill.cluckyGrazing.debuff": "+50% feed to feed other animals",
+  "skill.sheepwiseDiet.buff": "-25% feed to feed Sheep",
+  "skill.sheepwiseDiet.debuff": "+50% feed to feed other animals",
+  "skill.cowSmartNutrition.buff": "-25% feed to feed Cows",
+  "skill.cowSmartNutrition.debuff": "+50% feed to feed other animals",
   "skill.oliveGarden": "+0.2 Olive Yield",
   "skill.riceAndShine": "+0.2 Rice Yield",
   "skill.grapeEscape": "+0.2 Grape Yield",
-  "skill.victoriasSecretary": "Victoria's coin delivery revenue increased by 50%",
-  "skill.oliveExpress": "10% faster Olive growth",
-  "skill.riceRocket": "10% faster Rice growth",
-  "skill.vineVelocity": "10% faster Grape growth",
-  "skill.greenhouseGuru": "[Power Skill] Ability to make all Greenhouse crops currently growing ready to be harvested",
-  "skill.greenhouseGamble": "5% Chances of +1 yield for Greenhouse crops/fruits",
-  "skill.slickSaver": "Greenhouse plants need 1 less oil",
+  "skill.victoriasSecretary": "+50% Coins from Victoria's deliveries",
+  "skill.oliveExpress": "-10% Olive growth time",
+  "skill.riceRocket": "-10% Rice growth time",
+  "skill.vineVelocity": "-10% Grape growth time",
+  "skill.greenhouseGuru": "[Power Skill] Ability to make all greenhouse produce currently growing ready to be harvested",
+  "skill.greenhouseGamble": "5% Chances of +1 yield for greenhouse products",
+  "skill.slickSaver": "-1 Oil to grow greenhouse products",
   "skill.rockAndRoll": "+0.1 Stone Yield",
   "skill.ironBumpkin": "+0.1 Iron Yield",
-  "skill.speedMiner": "Stone recovers 20% faster",
+  "skill.speedMiner": "-20% Stone recovery time",
   "skill.tapProspector": "1 tap small mineral nodes",
   "skill.forgeWardProfits": "+20% Blacksmith deliveries revenue",
-  "skill.ironHustle": "Iron recovers 30% faster",
-  "skill.frugalMiner": "Pickaxes cost 20% less Coins",
-  "skill.rockyFavor": "+1 Stone yield, -0.5 Iron yield",
-  "skill.ferrousFavor": "+1 Iron yield, -0.5 Stone yield",
-  "skill.midasSprint": "Gold Recovers 10% faster",
+  "skill.ironHustle": "-30% Iron recovery time",
+  "skill.frugalMiner": "-20% Pickaxe coin cost",
+  "skill.rockyFavor.buff": "+1 Stone yield",
+  "skill.rockyFavor.debuff": "-0.5 Iron yield",
+  "skill.ferrousFavor.buff": "+1 Iron yield",
+  "skill.ferrousFavor.debuff": "-0.5 Stone yield",
+  "skill.midasSprint": "-10% Gold recovery time",
   "skill.goldenTouch": "+0.5 Gold Yield",
-  "skill.morePicks": "Increase stock of pickaxe by 70, stone pickaxe by 20, iron pickaxe by 7",
+  "skill.morePicks": "Increased stock: +70 Pickaxe, +20 Stone Pickaxe, +7 Iron Pickaxe",
   "skill.fireKissed": "+1 Crimstone yield on 5th consecutive day",
-  "skill.firesideAlchemist": "Crimstone recovers 15% faster",
-  "skill.fastFeasts": "Meals from Firepit, Kitchen cook 10% faster",
+  "skill.firesideAlchemist": "-15% Crimstone recovery time",
+  "skill.fastFeasts": "-10% Firepit and Kitchen cooking time",
   "skill.nomNom": "+10% Food deliveries revenue",
   "skill.munchingMastery": "+5% Experience from eating meals",
-  "skill.swiftSizzle": "Firepit cooking speed with oil increased by 40%",
-  "skill.frostedCakes": "Cakes cook 10% faster",
-  "skill.juicyBoost": "+10% experience from drinking smoothies",
-  "skill.doubleNom": "+1 food but requires 2x the ingredients",
-  "skill.turboFry": "Kitchen cooking speed with oil increased by 50%",
+  "skill.swiftSizzle": "-40% Fire Pit cooking time with oil",
+  "skill.frostedCakes": "-10% Cakes cooking time",
+  "skill.juicyBoost": "+10% experience for drinks from the Smoothie Shack",
+  "skill.doubleNom.buff": "+1 food from cooking",
+  "skill.doubleNom.debuff": "2x ingredients required for cooking",
+  "skill.turboFry": "-50% Kitchen cooking time with oil",
   "skill.instantGratification": "[Power Skill] Ability make all meals currently cooking ready to be eaten",
-  "skill.driveThroughDeli": "Eating meals from Deli adds +15% experience",
+  "skill.driveThroughDeli": "+15% experience for meals from the Deli",
   "skill.fieryJackpot": "+20% Chance of +1 food from Firepit",
-  "skill.fryFrenzy": "Deli cooking speed with oil increased by 60%",
-  "skill.sweetBonus": "+0.1 Honey on claim",
+  "skill.fryFrenzy": "-60% Deli cooking time with oil",
+  "skill.sweetBonus": "+0.1 Honey per hive",
   "skill.hyperBees": "+0.1 Honey production speed",
-  "skill.bloomingBoost": "Flowers grow 10% faster",
-  "skill.flowerSale": "Flowers Seeds cost 20% less coins",
+  "skill.bloomingBoost": "-10% Flower growth time",
+  "skill.flowerSale": "-20% Flower Seeds cost",
   "skill.buzzworthyTreats": "+10% Experience on food made with Honey",
-  "skill.blossomBonding": "Increased gifting effect of flowers, +2 relationship",
-  "skill.pollenPowerUp": "Pollination effect increases to +0.3 yield",
+  "skill.blossomBonding": "+2 relationship points for gifting flowers",
+  "skill.pollenPowerUp": "Additional +0.1 crop yield after pollination",
   "skill.petalledPerk": "10% chance of +1 Flower",
-  "skill.beeCollective": "Increased Bee Swarm chance by 20%",
-  "skill.flowerPower": "Flowers grow 20% faster",
-  "skill.floweryAbode": "Honey speed increased by +0.5 but flower growth time increased by 50%",
+  "skill.beeCollective": "+20% Bee Swarm chance",
+  "skill.flowerPower": "-20% Flower growth time",
+  "skill.floweryAbode.buff": "+0.5 Honey production speed",
+  "skill.floweryAbode.debuff": "-50% Flower growth time",
   "skill.petalBlessed": "[Power Skill] Ability to make all flowers currently growing ready to be harvested",
-  "skill.cropProcessorUnit": "Crop Machine grow time reduced by 5% but consumes 10% more oil",
-  "skill.oilGadget": "Machine uses 10% less oil",
+  "skill.cropProcessorUnit.buff": "-5% Crop Machine growth time",
+  "skill.cropProcessorUnit.debuff": "+10% Oil consumption",
+  "skill.oilGadget": "-10% Oil consumption",
   "skill.oilExtraction": "+1 Oil when collecting from reserves",
   "skill.leakProofTank": "Triple oil tank capacity",
-  "skill.cropExtensionModule": "Add Carrot and Cabbage seeds to machine",
-  "skill.rapidRig": "Crops grow 20% faster but consumes 40% more oil",
-  "skill.oilBeBack": "Oil refill time reduced by 20%",
+  "skill.cropExtensionModule": "Allow Carrot and Cabbage seeds to be used in crop machine",
+  "skill.rapidRig.buff": "-20% Crop Machine growth time",
+  "skill.rapidRig.debuff": "+40% Oil consumption",
+  "skill.oilBeBack": "-20% Oil refill time",
   "skill.fieldExpansionModule": "+5 packs added to machine",
   "skill.fieldExtensionModule": "+5 plots added to machine",
-  "skill.efficiencyExtensionModule": "Machine uses 30% less oil",
+  "skill.efficiencyExtensionModule": "-30% Oil consumption",
   "skill.greaseLightning": "[Power Skill] Ability to make empty oil wells instantly refill",
   "skill.wormyTreat": "+1 Worm from composting",
-  "skill.featheryBusiness": "Use feathers to speed up composters instead of eggs but requires 2x feathers to boost",
+  "skill.featheryBusiness.buff": "Use feathers instead of eggs for composters",
+  "skill.featheryBusiness.debuff": "2x feathers to boost composters",
   "skill.swiftDecomposer": "-10% compost time",
-  "skill.compostingBonanza": "Additional 1 hour reduction in composting time but double resources when boosting composters",
-  "skill.compostingOverhaul": "+2 worms but -5 fertilisers from all composters",
-  "skill.compostingRevamp": "+5 fertilisers but -3 worms from all composters",
+  "skill.compostingBonanza.buff": "Additional 1 hour reduction in composting time",
+  "skill.compostingBonanza.debuff": "2x resources to boost composters",
+  "skill.compostingOverhaul.buff": "+2 worms from all composters",
+  "skill.compostingOverhaul.debuff": "-5 fertilisers from all composters",
+  "skill.compostingRevamp.buff": "+5 fertilisers from all composters",
+  "skill.compostingRevamp.debuff": "-3 worms from all composters",
 
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
