--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3849,32 +3849,29 @@
   "skill.youngFarmer": "+0.1 Basic Crop yield",
   "skill.experiencedFarmer": "+0.1 Medium Crop yield",
   "skill.bettysFriend": "Betty Coin delivery revenue increased by 30%",
-  "skill.efficientBin": "+5 Sprout Mix when collecting from Compost Bin",
-  "skill.turboCharged": "+5 Fruitful Blend when collecting from Turbo Composter",
   "skill.oldFarmer": "+0.1 Advanced Crop yield",
   "skill.strongRoots": "-10% Advanced crop growth time",
   "skill.coinSwindler": "+10% coins when selling crops (Seed Shop)",
-  "skill.goldenSunflower": "1 in 700 chance to get +0.35 gold when manually harvesting sunflowers",
+  "skill.goldenSunflower": "1/700 chance for +0.35 gold when harvesting sunflowers (plots only)",
   "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area",
   "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area",
-  "skill.instantGrowth": "[Power Skill] Grants the ability to instantly harvest all currently growing crops",
+  "skill.instantGrowth": "Grants the ability to instantly harvest all currently growing crops",
   "skill.acreFarm.buff": "+1 Advanced crop yield",
   "skill.acreFarm.debuff": "-0.5 Basic and Medium crop yield",
   "skill.hectareFarm.buff": "+1 Basic and Medium crop yield",
   "skill.hectareFarm.debuff": "-0.5 Advanced crop yield",
-  "skill.premiumWorms": "+10 Rapid Root when collecting from Premium Composter",
   "skill.lauriesGains": "Increases Laurie the Chuckle Crow's area of effect (AOE) to a 7x7 area",
-  "skill.fruitfulFumble": "+0.1 Fruit Patch Yield",
-  "skill.fruityHeaven": "-10% Fruit seeds cost",
+  "skill.fruitfulFumble": "+0.1 fruit patch yield",
+  "skill.fruityHeaven": "-10% fruit seeds cost",
   "skill.fruityProfit": "+50% coins from Tango's deliveries",
-  "skill.loyalMacaw": "Macaw's effect doubled",
+  "skill.loyalMacaw": "Double Macaw's effect",
   "skill.catchup": "-10% patch fruit growth time",
   "skill.noAxeNoWorries.buff": "Chop fruit branches without axes",
   "skill.noAxeNoWorries.debuff": "-1 wood from fruit branches",
   "skill.fruityWoody": "+1 wood from fruit branches and stems",
   "skill.pearTurbocharge": "Double Immortal Pear's effect",
-  "skill.crimeFruit": "Increase Tomato and Lemon stock by 10",
-  "skill.generousOrchard": "10% chance to get +1 patch fruit yield",
+  "skill.crimeFruit": "+10 Tomato and Lemon stock",
+  "skill.generousOrchard": "10% chance of +1 patch fruit yield",
   "skill.longPickings.buff": "-50% Apple and Banana growth time",
   "skill.longPickings.debuff": "+100% growth time for all other patch fruits",
   "skill.shortPickings.buff": "-50% Blueberry and Orange growth time",
@@ -3882,14 +3879,14 @@
   "skill.zestyVibes.buff": "+1 Tomato and Lemon yield",
   "skill.zestyVibes.debuff": "-0.5 all other patch fruit yield",
   "skill.lumberjacksExtra": "+0.1 wood yield",
-  "skill.treeCharge": " -10% tree growth time",
+  "skill.treeCharge": "-10% tree growth time",
   "skill.moreAxes": "+50 axe stock",
   "skill.instaChop": "1 Tap Trees",
   "skill.toughTree": "1/10 chance of +3 wood yield",
   "skill.fellersDiscount": "-20% axe cost",
   "skill.moneyTree": "1% chance of finding 200 Coins when chopping trees",
   "skill.treeTurnaround": "10% chance for trees to grow instantly",
-  "skill.treeBlitz": "[Power Skill] Ability to make all trees instantly grow",
+  "skill.treeBlitz": "Ability to make all trees instantly grow",
   "skill.fishermansTwoFold": "+2 Fishing daily limit",
   "skill.fishyChance": "10% chance of +1 basic fish",
   "skill.fishyRoll": "10% chance of +1 advanced fish",
@@ -3925,8 +3922,8 @@
   "skill.oliveExpress": "-10% Olive growth time",
   "skill.riceRocket": "-10% Rice growth time",
   "skill.vineVelocity": "-10% Grape growth time",
-  "skill.greenhouseGuru": "[Power Skill] Ability to make all greenhouse produce currently growing ready to be harvested",
-  "skill.greenhouseGamble": "5% Chances of +1 yield for greenhouse products",
+  "skill.greenhouseGuru": "Ability to make all greenhouse produce currently growing ready to be harvested",
+  "skill.greenhouseGamble": "5% chance of +1 greenhouse produce",
   "skill.slickSaver": "-1 Oil to grow greenhouse products",
   "skill.rockAndRoll": "+0.1 Stone Yield",
   "skill.ironBumpkin": "+0.1 Iron Yield",
@@ -3953,7 +3950,7 @@
   "skill.doubleNom.buff": "+1 food from cooking",
   "skill.doubleNom.debuff": "2x ingredients required for cooking",
   "skill.turboFry": "-50% Kitchen cooking time with oil",
-  "skill.instantGratification": "[Power Skill] Ability make all meals currently cooking ready to be eaten",
+  "skill.instantGratification": "Ability to make all meals currently cooking ready to be eaten",
   "skill.driveThroughDeli": "+15% experience for meals from the Deli",
   "skill.fieryJackpot": "+20% Chance of +1 food from Firepit",
   "skill.fryFrenzy": "-60% Deli cooking time with oil",
@@ -3963,18 +3960,18 @@
   "skill.flowerSale": "-20% Flower Seeds cost",
   "skill.buzzworthyTreats": "+10% Experience on food made with Honey",
   "skill.blossomBonding": "+2 relationship points for gifting flowers",
-  "skill.pollenPowerUp": "Additional +0.1 crop yield after pollination",
+  "skill.pollenPowerUp": "Additional +0.1 crop yield after pollination (total +0.3)",
   "skill.petalledPerk": "10% chance of +1 Flower",
   "skill.beeCollective": "+20% Bee Swarm chance",
   "skill.flowerPower": "-20% Flower growth time",
   "skill.floweryAbode.buff": "+0.5 Honey production speed",
   "skill.floweryAbode.debuff": "-50% Flower growth time",
-  "skill.petalBlessed": "[Power Skill] Ability to make all flowers currently growing ready to be harvested",
+  "skill.petalBlessed": "Ability to make all flowers currently growing ready to be harvested",
   "skill.cropProcessorUnit.buff": "-5% Crop Machine growth time",
   "skill.cropProcessorUnit.debuff": "+10% Oil consumption",
   "skill.oilGadget": "-10% Oil consumption",
   "skill.oilExtraction": "+1 Oil when collecting from reserves",
-  "skill.leakProofTank": "Triple oil tank capacity",
+  "skill.leakProofTank": "Triple oil tank capacity in crop machine",
   "skill.cropExtensionModule": "Allow Carrot and Cabbage seeds to be used in crop machine",
   "skill.rapidRig.buff": "-20% Crop Machine growth time",
   "skill.rapidRig.debuff": "+40% Oil consumption",
@@ -3982,17 +3979,20 @@
   "skill.fieldExpansionModule": "+5 packs added to machine",
   "skill.fieldExtensionModule": "+5 plots added to machine",
   "skill.efficiencyExtensionModule": "-30% Oil consumption",
-  "skill.greaseLightning": "[Power Skill] Ability to make empty oil wells instantly refill",
-  "skill.wormyTreat": "+1 Worm from composting",
-  "skill.featheryBusiness.buff": "Use feathers instead of eggs for composters",
+  "skill.greaseLightning": "Ability to make empty oil wells instantly refill",
+  "skill.efficientBin": "+5 Sprout Mix",
+  "skill.turboCharged": "+5 Fruitful Blend",
+  "skill.wormyTreat": "+1 Worm",
+  "skill.featheryBusiness.buff": "Use feathers instead of eggs to boost composters",
   "skill.featheryBusiness.debuff": "2x feathers to boost composters",
   "skill.swiftDecomposer": "-10% compost time",
-  "skill.compostingBonanza.buff": "Additional 1 hour reduction in composting time",
+  "skill.compostingBonanza.buff": "Additional 1 hour reduction in composting time when boosting composters",
+  "skill.premiumWorms": "+10 Rapid Root",
   "skill.compostingBonanza.debuff": "2x resources to boost composters",
-  "skill.compostingOverhaul.buff": "+2 worms from all composters",
-  "skill.compostingOverhaul.debuff": "-5 fertilisers from all composters",
-  "skill.compostingRevamp.buff": "+5 fertilisers from all composters",
-  "skill.compostingRevamp.debuff": "-3 worms from all composters",
+  "skill.compostingOverhaul.buff": "+2 Worms",
+  "skill.compostingOverhaul.debuff": "-5 fertilisers",
+  "skill.compostingRevamp.buff": "+5 fertilisers",
+  "skill.compostingRevamp.debuff": "-3 Worms",
 
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
@@ -4695,6 +4695,7 @@
   "skill.costMessage": "This will cost {{points}} skill points.",
   "skill.claimSkill": "Claim Skill",
   "skill.cooldown": "{{cooldown}} Cooldown",
+  "skill.powerSkill": "Power Skill",
   "skillPath.skills": "{{skillPath}} Skills",
   "skillTier.skillPoints.singular": "{{points}} Skill Point",
   "skillTier.skillPoints.plural": "{{points}} Skill Points",
