[FEAT] Add Items to images

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4346,6 +4346,11 @@
   "description.cozyFireplace": "A warm and inviting fireplace that sets the perfect backdrop for holiday gatherings.",
   "description.christmasRug": "A festive rug adorned with seasonal patterns to bring warmth and holiday spirit to your home.",
   "description.christmasCandle": "A glowing candle with a festive scent, ideal for creating a cozy and magical atmosphere.",
+  "description.santaPenguin": "A penguin thats always ready for the festive season!",
+  "description.penguinPool": "Keep your eyes on these penguins or they will cause chaos on your island!",
+  "description.snowman": "A special snowman that for some reason never melts!?",
+  "description.festiveToyTrain": "A special snowman that for some reason never melts!?",
+
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
